tests/ui/parallel-rustc/typeck-not-cached-issue-119784.stderr
error[E0275]: overflow assigning `_` to `Option<_>`
   |
LL |     let left = |o_a: Option<_>| o_a.unwrap();
   |                                 ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.